# knowledgeforge

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: COMPETENCY-QUESTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: production-checklist.md  research-alignment.md
src/knowledgeforge/: __init__.py  contracts.py  pipeline.py
src/knowledgeforge/adapter/: __init__.py  extract.py  universal.py  vault.py
src/knowledgeforge/api/: main.py  models.py  security.py
src/knowledgeforge/api/routes/: embed.py  graph.py  health.py  ingest.py  query.py
src/knowledgeforge/cli/: main.py
src/knowledgeforge/community/: __init__.py  detector.py
src/knowledgeforge/embeddings/: __init__.py  pipeline.py
src/knowledgeforge/extractor/: llm.py
src/knowledgeforge/inference/: __init__.py  graphrag.py
src/knowledgeforge/resolution/: resolver.py
src/knowledgeforge/store/: __init__.py  sqlite.py
tests/: test_api.py  test_community.py  test_contracts.py  test_e2e.py  test_embeddings.py  test_extract.py  test_resolution_eval.py  test_security.py  test_store.py  test_universal_adapter.py  test_vault_adapter.py
tests/fixtures/: er_labelled_pairs.json
