[project]
name = "knowledgeforge"
version = "0.1.0"
description = "Domain-agnostic knowledge graph engine — raw unstructured data in, best-in-class KG out"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.28",
    "chromadb>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyshacl>=0.26",
    "sentence-transformers>=3.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "rdflib>=7.0",
]

[project.scripts]
knowledgeforge = "knowledgeforge.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgeforge"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
